<resources>
    <string name="app_name">Calculator</string>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="reset">AC</string>
    <string name="toggle_sign">+/-</string>
    <string name="percentage">%</string>
    <string name="division">/</string>
    <string name="multiply">X</string>
    <string name="subtraction">-</string>
    <string name="addition">+</string>
    <string name="equals">=</string>
    <string name="dot">.</string>
</resources>
