<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorDarkBlack"
    tools:context="com.example.gsksivesh.calculator.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/TextBox"
            android:id="@+id/text_answer" />
        <GridLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:columnCount="4"
            android:rowCount="5">

            <Button
                android:id="@+id/reset"
                style="@style/AllButtons"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reset" />

            <Button
                android:id="@+id/toggle_sign"
                style="@style/AllButtons"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/toggle_sign" />

            <Button
                android:id="@+id/modulus"
                style="@style/AllButtons"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/modulus" />

            <Button
                android:id="@+id/division"
                style="@style/AllButtons.Operation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/division" />

            <Button
                android:id="@+id/no_7"
                style="@style/AllButtons"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/seven" />

            <Button
                android:id="@+id/no_8"
                style="@style/AllButtons"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/eight" />

            <Button
                android:id="@+id/no_9"
                style="@style/AllButtons"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nine" />

            <Button
                android:id="@+id/multiply"
                style="@style/AllButtons.Operation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/multiply" />

            <Button
                android:id="@+id/no_4"
                style="@style/AllButtons"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/four" />

            <Button
                android:id="@+id/no_5"
                style="@style/AllButtons"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/five" />

            <Button
                android:id="@+id/no_6"
                style="@style/AllButtons"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/six" />

            <Button
                android:id="@+id/subtraction"
                style="@style/AllButtons.Operation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/subtraction" />

            <Button
                android:id="@+id/no_1"
                style="@style/AllButtons"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/one" />

            <Button
                android:id="@+id/no_2"
                style="@style/AllButtons"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/two" />

            <Button
                android:id="@+id/no_3"
                style="@style/AllButtons"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/three" />

            <Button
                android:id="@+id/addition"
                style="@style/AllButtons.Operation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/addition" />

            <Button
                android:id="@+id/no_0"
                style="@style/AllButtons"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnSpan="2"
                android:layout_gravity="fill"
                android:text="@string/zero" />

            <Button
                android:id="@+id/dot"
                style="@style/AllButtons"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dot" />

            <Button
                android:id="@+id/equals"
                style="@style/AllButtons.Operation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/equals" />
        </GridLayout>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>
